--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Rosie</title>
+    <title>Matthew Pearson</title>
 </head>
 <body>
     <header>
@@ -17,8 +17,8 @@
             <div class="col-md-8">
                 <div class="row no-gutters bg-color-name-title">
                     <div class="col heading">
-                        <h1 class="name">Rosie Odenkirk</h1>
-                        <h2 class="title"> Full Stack Developer</h2>
+                        <h1 class="name">Matthew Pearson</h1>
+                        <h2 class="title"> Full Stack Web Developer</h2>
                     </div>
                 </div>
                 <div class="row no-gutters">
@@ -48,7 +48,7 @@
                 <div class="row">
                     <div class="col-12">
                         <h3 class="section-heading uppercase">
-                            Personal Info
+                            Personal Infomation
                         </h3>
                     </div>
                 </div>
@@ -60,7 +60,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            Rosie Odenkirk
+                            Matthew Pearson
                         </p>
                     </div>
                 </div>
@@ -72,7 +72,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            17 Riverdale, Catskills, NY USA
+                            10 Pamela Court, Victoria Road, Romford, Essex
                         </p>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            555 204 1973
+                            01708 734937
                         </p>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            rosie.odenkirk@hansaw.com
+                            matt.pearson29@googlemail.com
                         </p>
                     </div>
                 </div>
@@ -114,9 +114,9 @@
                                 <i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                                <h4 class="three-reasons-heading uppercase">What I do?</h4>
                                 <p>
-                                    I'm a skilled Full Stack Developer with a wealth of diverse life and technical experience that I bring to every project.
+                                    I'm a skilled Full Stack Web Developer with a wealth of diverse life and technical experience that I bring to every project.
                                 </p>
                             </div>
                         </div>
@@ -127,9 +127,9 @@
                                 <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
+                                <h4 class="three-reasons-heading uppercase">How I do it?</h4>
                                 <p>
-                                    I follow form as well as function. I know that the aesthetics of effective design combined with application speed, security and reliability combine to create a great user experience.
+                                    I create user experiance as well as keeping function in mind. I know that the application speed, security and reliability combine to create a great over all experience.
                                 </p>
                             </div>
                         </div>
@@ -142,7 +142,7 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
                                 <p>
-                                    I work quickly and effectively in getting things built and working across the stack. I'm an excellent communicator who thrives in bright and enthusiastic teams and I'm also a self starter when working solo.
+                                    I work quickly and effectively in getting things built and working across the stack. I'm an excellent communicator who thrives teams and also when working solo.
                                 </p>
                             </div>
                         </div>
@@ -157,8 +157,10 @@
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
                 <p class="inline-block">
-                    Full Stack Web Developer. Skilled in everything from HTML to Heroku. The capacity for structural and design thinking.
+                    Full Stack Web Developer. Skilled in everything from HTML to Heroku. With the capacity for structural and design thinking.
                 </p>
+            </div>
+            <div class="col-sm-4">
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Download</h5>
@@ -169,47 +171,6 @@
                         <span class="sr-only">Download link.</span>
                     </a>
                 </p>
-            </div>
-            <div class="col-sm-4">
-                <h5 class="uppercase general-sub">Social</h5>
-                <ul class="list-inline social-links">
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
-                            <span class="sr-only">Facebook</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                            <span class="sr-only">Twitter</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-linkedin" aria-hidden="true"></i>
-                            <span class="sr-only">LinkedIn</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-pinterest" aria-hidden="true"></i>
-                            <span class="sr-only">Pinterest</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-instagram" aria-hidden="true"></i>
-                            <span class="sr-only">Instagram</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-youtube" aria-hidden="true"></i>
-                            <span class="sr-only">YouTube</span>
-                        </a>
-                    </li>
-                </ul>
             </div>
         </div>
     </footer>
