--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
                                 <p>
-                                    I work quickly and effectively in getting things built and working across the stack. I'm an excellent communicator who thrives teams and also when working solo.
+                                    I work quickly and effectively in getting things built and working across the stack. I'm an excellent communicator who thrives in teams and also when working solo.
                                 </p>
                             </div>
                         </div>
