--- a/resume.html
+++ b/resume.html
@@ -17,8 +17,8 @@
             <div class="col-md-8">
                 <div class="row no-gutters bg-color-name-title">
                     <div class="col heading">
-                        <h1 class="name">Rosie Odenkirk</h1>
-                        <h2 class="title"> Full Stack Developer</h2>
+                        <h1 class="name">Matthew Pearson</h1>
+                        <h2 class="title"> Full Stack Web Developer</h2>
                     </div>
                 </div>
                 <div class="row no-gutters">
@@ -86,7 +86,7 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Front End</h4>
                                 <p>
-                                    I'm skilled in User Experience Design using the trinity of HTML/CSS/Javascript. I also have extensive experience in Front End Frameworks such as Angular and React
+                                    I'm skilled in User Experience Design using the trinity of HTML/CSS/Javascript.
                                 </p>
                             </div>
                         </div>
