--- a/index.html
+++ b/index.html
@@ -161,8 +161,6 @@
                 </p>
             </div>
             <div class="col-sm-4">
-            </div>
-            <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.
@@ -171,6 +169,17 @@
                         <span class="sr-only">Download link.</span>
                     </a>
                 </p>
+            </div>
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub">Social</h5>
+                <ul class="list-inline social-links">
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.linkedin.com/in/matthew-pearson-78b566135">
+                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                            <span class="sr-only">LinkedIn</span>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </footer>
