--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Rosie</title>
+    <title>Matthew Pearson</title>
 </head>
 <body>
     <header>
@@ -34,7 +34,7 @@
                                 <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-download menuitem">
-                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
+                                <a href="assets/cv/resume2021.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
                             </li>
                         </ul>
                     </div>
@@ -53,21 +53,21 @@
                     </div>
                 </div>
                 <div class="history-items">
-                    <div class="timeline-item" data-dates="02/1998 - 04/2004">
-                        <h4>National College of Art and Design (NCAD)</h4>
-                        <p>Sculptor in residence</p>
+                    <div class="timeline-item" data-dates="jan 2020 - Presant">
+                        <h4>Retrainning and updating codeing skills</h4>
+                        <p>keeping my skills current and fresh</p>
                     </div>
-                    <div class="timeline-item" data-dates="04/2004 - 06/2008">
-                        <h4>Fisher and Diaz Funeral Directors</h4>
-                        <p>Junior Embalmer</p>
+                    <div class="timeline-item" data-dates="2018 - 2019">
+                        <h4>First stop IT</h4>
+                        <p>2nd line IT engineer</p>
                     </div>
-                    <div class="timeline-item" data-dates="06/2008 - 06/2011">
-                        <h4>Phantom Design Inc. Dublin</h4>
-                        <p>Junior Front End Developer</p>
+                    <div class="timeline-item" data-dates="2016 - 2018">
+                        <h4>Romford Drivers Association</h4>
+                        <p>Telephonist/ IT Technician</p>
                     </div>
-                    <div class="timeline-item" data-dates="06/2011 - Present">
-                        <h4>Hooli Inc. Silicon Valley</h4>
-                        <p>Full Stack Web Developer</p>
+                    <div class="timeline-item" data-dates="2013 - 2016">
+                        <h4>The Cloud Network</h4>
+                        <p>Field Service Engineer</p>
                     </div>
                 </div>
             </div>
@@ -155,7 +155,7 @@
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.
-                    <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
+                    <a href="assets/cv/resume2021.pdf" target="_blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download link.</span>
                     </a>
@@ -165,41 +165,12 @@
                 <h5 class="uppercase general-sub">Social</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
-                            <span class="sr-only">Facebook</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                            <span class="sr-only">Twitter</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
+                        <a target="_blank" href="https://www.linkedin.com/in/matthew-pearson-78b566135">
                             <i class="fa fa-linkedin" aria-hidden="true"></i>
                             <span class="sr-only">LinkedIn</span>
                         </a>
                     </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-pinterest" aria-hidden="true"></i>
-                            <span class="sr-only">Pinterest</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-instagram" aria-hidden="true"></i>
-                            <span class="sr-only">Instagram</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-youtube" aria-hidden="true"></i>
-                            <span class="sr-only">YouTube</span>
-                        </a>
-                    </li>
+                    
                 </ul>
             </div>
         </div>
