--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,12 @@
         </div>
     </header>
     <section class="container-fluid">
+        <section class="container-fluid">
+            <div class="row">
+                <div class="col-md-4 bg-color-personal-info section-column">
+                    <div class="row">
+                        <div class="col-12">
+                        </div>
         <div class="row bg-color-contact">
             <div class="col">
                 <h3 class="contact-heading uppercase text-center">Got a project in mind?</h3>
