--- a/contact.html
+++ b/contact.html
@@ -49,8 +49,9 @@
                     <div class="row">
                         <div class="col-12">
                         </div>
-        <div class="row bg-color-contact">
-            <div class="col">
+                        <div class="col-md-8 bg-color-three-reasons section-column">
+                                <div class="row">
+                                    <div class="col">
                 <h3 class="contact-heading uppercase text-center">Got a project in mind?</h3>
                 <h5 class="uppercase text-center">Let's work together!</h5>
 
