--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,9 @@
                 <div class="col-md-4 bg-color-personal-info section-column">
                     <div class="row">
                         <div class="col-12">
+                            <a target="_blank" href="https://matt-pearson29.github.io/just-gym">
+                            <h4>Just Gym</h4>
+                            </a>
                     </div>
                     </div>
                         <div class="col-md-8 bg-color-three-reasons section-column">
