--- a/contact.html
+++ b/contact.html
@@ -51,15 +51,15 @@
                             <a target="_blank" href="https://matt-pearson29.github.io/just-gym">
                             <h4>Just Gym</h4>
                             </a>
-                    
-                    
-                        <div class="col-md-8 bg-color-three-reasons section-column">
-                                <div class="row">
-                                    <div class="col">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-8 bg-color-three-reasons section-column">
+                    <div class="row">
+                        <div class="col">
                 <h3 class="contact-heading uppercase text-center">Got a project in mind?</h3>
                 <h5 class="uppercase text-center">Let's work together!</h5>
-
-                <div class="center-form">
+                    <div class="center-form">
                     <form>
                         <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
                         <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
