--- a/contact.html
+++ b/contact.html
@@ -48,10 +48,17 @@
                 <div class="col-md-4 bg-color-personal-info section-column">
                     <div class="row">
                         <div class="col-12">
+                            <h3 class="uppercase">site portfolio</h3>
+                        <div>
                             <a target="_blank" href="https://matt-pearson29.github.io/just-gym">
                             <h4>Just Gym</h4>
                             </a>
                         </div>
+                        <div>
+                            <a target="_blank" href="https://matt-pearson29.github.io/brain-wave">
+                                <h4>Brain Wave</h4>
+                                </a>
+                        </div>        
                     </div>
                 </div>
                 <div class="col-md-8 bg-color-three-reasons section-column">
