--- a/contact.html
+++ b/contact.html
@@ -58,6 +58,7 @@
                             <a target="_blank" href="https://matt-pearson29.github.io/brain-wave">
                                 <h4>Brain Wave</h4>
                                 </a>
+                        </div>
                         </div>        
                     </div>
                 </div>
