--- a/contact.html
+++ b/contact.html
@@ -48,16 +48,18 @@
                 <div class="col-md-4 bg-color-personal-info section-column">
                     <div class="row">
                         <div class="col-12">
-                            <h3 class="uppercase">site portfolio</h3>
+                            <h3 class=class="section-heading uppercase">site portfolio</h3>
                         <div>
                             <a target="_blank" href="https://matt-pearson29.github.io/just-gym">
-                            <h4>Just Gym</h4>
+                            <h4 class="key">Just Gym</h4>
                             </a>
+                            <p class="value">A static site coded in HTML and CSS.</p>
                         </div>
                         <div>
                             <a target="_blank" href="https://matt-pearson29.github.io/brain-wave">
-                                <h4>Brain Wave</h4>
+                                <h4 class="key">Brain Wave</h4>
                                 </a>
+                                <p class="value">This is a interactie app coded in HTML,CSS and JavaScript/n in the form of a retro game called simon but with some differnces.</p>
                         </div>
                         </div>        
                     </div>
