--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,7 @@
                     <div class="row">
                         <div class="col-12">
                             <h3 class=class="section-heading uppercase">site portfolio</h3>
+                        </div>
                         <div>
                             <a target="_blank" href="https://matt-pearson29.github.io/just-gym">
                             <h4 class="key">Just Gym</h4>
