--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
                 <div class="col-md-4 bg-color-personal-info section-column">
                     <div class="row">
                         <div class="col-12">
-                            <h3 class="history-heading uppercase">site portfolio</h3>
+                            <h3 class="history-heading1 uppercase">site portfolio</h3>
                         
                         <div>
                             <a target="_blank" href="https://matt-pearson29.github.io/just-gym">
