--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
                             <a target="_blank" href="https://matt-pearson29.github.io/brain-wave">
                                 <h4 class="key">Brain Wave</h4>
                                 </a>
-                                <p class="value">This is a interactie app coded in HTML,CSS and JavaScript/n in the form of a retro game called simon but with some differnces.</p>
+                                <p class="value">This is a interactie app coded in HTML,CSS and JavaScript in the form of a retro game called simon but with some differnces.</p>
                         </div>
                         </div>        
                     </div>
