--- a/contact.html
+++ b/contact.html
@@ -11,12 +11,13 @@
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js">
 </script>
-<script type="text/javascript"><script>
+<script type="text/javascript">
    (function(){
-      emailjs.init("user_DWPl7mFaV1DtsPZUwfz7b")}{}
+      emailjs.init("user_DWPl7mFaV1DtsPZUwfz7b");
+        })();
 </script>
     <title>Matthew Pearson</title>
-    
+
 </head>
 <body>
     <header>
