--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
                 <h5 class="uppercase text-center">Let's work together!</h5>
                     <div class="center-form">
                     <form onsubmit="return sendMail(this);" method="post">
-                        <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
+                        <input type="text" name="name" id="name" class="form-control" placeholder="Name" required />
                         <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
                         <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project description" required></textarea>
                         <div class="form-row text-center">
