--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
                     <div class="center-form">
                     <form onsubmit="return sendMail(this);" method="post">
                         <input type="text" name="name" id="name" class="form-control" placeholder="Name" required />
-                        <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
+                        <input type="email" name="email" id="email" class="form-control" placeholder="Email" required />
                         <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project description" required></textarea>
                         <div class="form-row text-center">
                             <div class="col">
