--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
     emailjs.init("user_DWPl7mFaV1DtsPZUwfz7b");
     })();
     </script>
+    <script type="text/javascript"></script>
 </head>
 <body>
     <header>
