--- a/contact.html
+++ b/contact.html
@@ -76,13 +76,13 @@
                 <h3 class="contact-heading uppercase text-center">Got a project in mind?</h3>
                 <h5 class="uppercase text-center">Let's work together!</h5>
                     <div class="center-form">
-                    <form>
+                    <form method="post">
                         <input type="text" name="name" id="name" class="form-control" placeholder="Name" required />
                         <input type="email" name="email" id="email" class="form-control" placeholder="Email" required />
                         <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project description" required></textarea>
                         <div class="form-row text-center">
                             <div class="col">
-                                <button onclick="sendmail()" class="btn btn-secondary">Send Project Request</button>
+                                <button onclick="sendmail()" type="button" class="btn btn-secondary">Send Project Request</button>
                             </div>
                         </div>
                     </form>
