--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
                         <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project description" required></textarea>
                         <div class="form-row text-center">
                             <div class="col">
-                                <button onclick="sendmail()" type="button" class="btn btn-secondary">Send Project Request</button>
+                                <button onclick="sendmail()" type="onclick" class="btn btn-secondary">Send Project Request</button>
                             </div>
                         </div>
                     </form>
