--- a/contact.html
+++ b/contact.html
@@ -79,10 +79,10 @@
                     <form>
                         <input type="text" name="name" id="name" class="form-control" placeholder="Name" required />
                         <input type="email" name="email" id="email" class="form-control" placeholder="Email" required />
-                        <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project description" required></textarea>
+                        <textarea rows="5" name="message" id="message" class="form-control" placeholder="Project description" required></textarea>
                         <div class="form-row text-center">
                             <div class="col">
-                                <button onclick="sendmail()" class="btn btn-secondary">Send Project Request</button>
+                                <button onclick="sendmail()" class="btn btn-primary">Send Project Request</button>
                             </div>
                         </div>
                     </form>
