--- a/contact.html
+++ b/contact.html
@@ -84,9 +84,9 @@
                             <input class="form-control" type="text" id="email" name="email" placeholder="Your email...">
             
                             <label for="message">Message :</label>
-                            <textarea class="form-control textarea" id="message" rows="3" placeholder="Your message..."></textarea>
+                            <textarea class="form-control textarea" id="message" rows="5" placeholder="Your message..."></textarea>
             
-                             <button onclick="sendmail()" type="button" class="btn btn-primary">Send</button>
+                             <button onclick="sendmail()" class="btn btn-primary">Send</button>
                         </div>
                     </form>
                 </div>
